<resources>
    <string name="app_name">ActiveHouse</string>
    <string name="server_address_get_rooms">http://munro.humber.ca/~n01046059/ActiveHouse/get_rooms.php</string>
    <string name="server_address_login">http://munro.humber.ca/~n01046059/ActiveHouse/login.php</string>
    <string name="server_address_get_room">http://munro.humber.ca/~n01046059/ActiveHouse/get_room.php</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="saveLogin">Save my login</string>
    <string name="title_activity_home">Home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="rooms">Rooms</string>
    <string name="settings">Settings</string>
    <string name="viewRooms">View Rooms</string>
    <string name="home">Home</string>
    <string name="statistics">Statistics</string>
    <string name="allLightsOff">All Lights Turned Off</string>
    <string name="logout">Logout</string>
    <string name="title_activity_settings">Settings</string>
    <string name="allLightsOn">All Lights have been turned on</string>
    <string name="title_activity_room">RoomActivity</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="positive">Positive</string>
    <string name="negative">Negative</string>
    <string name="view_all_rooms">View All Rooms</string>


</resources>
