<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_48dp"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_viewRooms"
            android:icon="@drawable/ic_pageview_black_48dp"
            android:title="@string/viewRooms" />
        <item
            android:id="@+id/nav_stats"
            android:icon="@drawable/ic_history_black_48dp"
            android:title="@string/statistics" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_48dp"
            android:title="@string/settings" />
    </group>

    <item android:title="@string/rooms">
        <menu>
            <item
                android:id="@+id/nav_MBedroom"
                android:icon="@drawable/ic_hotel_black_48dp"
                android:title="Master Bedroom" />
            <item
                android:id="@+id/nav_Kitchen"
                android:icon="@drawable/ic_kitchen_black_48dp"
                android:title="Kitchen" />
            <item
                android:id="@+id/nav_LivingRoom"
                android:icon="@drawable/ic_weekend_black_48dp"
                android:title="Living Room" />
        </menu>
    </item>

</menu>
